--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@ body {
 
 <div class="header">
   <h1>Machine Learning and AI</h1>
-  <p>AWS Certified DevOps Engineer – Professional exam (DOP-C01)</p>
-  <p>Congraluations you are on Track</p>
+  <p>AWS Certified ML Engineer</p>
 </div>
 
 <div class="navbar">
