--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ body {
 
 <div class="header">
   <h1>Machine Learning and AI</h1>
-  <p>AWS Certified ML Engineer</p>
+  <p>AWS Certified DevOps Engineer – Professional exam</p>
+  <p>Congraluations you are on Track</p>
 </div>
 
 <div class="navbar">
